# coretrace-testkit

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PEP8-format.yml
scripts/: format-check.sh  format.sh  setup-dev.sh
scripts/ci/: commit_checker.py  semver_check.py
scripts/git/: commit_msg_checker.py
src/ctestfw/: plan.py  platform.py  result.py  runner.py
src/ctestfw/assertions/: compiler.py  core.py
src/ctestfw/framework/: reporter.py  suite.py  testcase.py
src/ctestfw/inspect/: filetype.py
