[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coretrace-tester-framework"
version = "0.1.0"
description = "Minimal test framework for CoreTrace tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ctestfw*"]
